<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/info_layout_margin"
        android:layout_marginEnd="@dimen/info_layout_margin"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/albumArt"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/info_art_margin"
            android:src="@drawable/aeon"/>

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:layout_marginTop="@dimen/info_text_margin"
            android:gravity="center_horizontal"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_text_margin"
            android:gravity="center_horizontal"
            android:text="@string/album_name"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_text_margin"
            android:gravity="center_horizontal"
            android:text="@string/artist_name"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_text_margin"
            android:gravity="center_horizontal"
            android:text="@string/song_size"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/bitRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_text_margin"
            android:gravity="center_horizontal"
            android:text="@string/bit_rate"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_text_margin"
            android:layout_marginBottom="@dimen/info_text_margin"
            android:gravity="center_horizontal"
            android:text="@string/path"
            android:textSize="12sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>